# refery

./: LICENSE  README.md  flake.nix  main.py  prettify.py  pyproject.toml  requirements.txt  setup.py  test_suite.py
refery/: custom_io.py  diff.py  main.py  prettify.py  setup.py  test_result.py  test_suite.py
src/: main.py  prettify.py  test_suite.py
