[tool.poetry]
name = "refery"
version = "2.0.1"
description = "Functional testing tool"
authors = ["Rostan Tabet <rostan.tabet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
refery = "refery.main:main"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
colorama = "^0.4.6"
junit-xml = "^1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
